# sov-data

./: .gitignore  pyproject.toml
src/s&p500/: downloader.py  preliminary.ipynb
src/s&p500/sql/: queries.sql  table_creation.sql
